@@ -106,6 +106,7 @@ Changed:
 - Added fluid drag
  - Has data pack config
  - Currently supports water, lava, honey, and chocolate
+- Added projectile skipping on fluids
 [Addons, integration] - Added ability to register multiple fluid blob effect handlers for a single fluid type
 - Refactor projectile properties to be less inheritance-based (BREAKING)
  - New approach involves projectile-specific serializers that projectiles must reference instead of getting wildcard
